--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory game | Javascript</title>
+    <title>Memory Game | JavaScript</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="container">
     <h2>Memory Game</h2>
     <div class="game"></div>
-    <button class="reset" onclick="window.location.reload();">Reset Game</button>
+    <div class="scoreboard">
+        <span>Time: <span id="timer">0</span>s</span>
+        <button class="reset" onclick="resetGame()">Reset Game</button>
+        <span id="score">Score: 0</span>
+    </div>
    </div>
    <script src="app.js"></script>
 </body>
